--- a/index.html
+++ b/index.html
@@ -1,13 +1,89 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Monogram</title>
+  <script type="module" defer src="src/main.jsx"></script>
+</head>
+<body>
+  <header>
+    <section class="heading-background">
+      <h1>A CONSOLE FOR EVERY WORKFLOW</h1>
+      <p>
+        Discover the perfect console for yours.
+      </p>
+    </section>
+    <section class="header-container">
+      <a class="monogram-logo">
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill: rgb(239, 194, 179);"><circle cx="11.99" cy="11.99" r="2.01"></circle><path d="M12 2a10 10 0 1 0 10 10A10 10 0 0 0 12 2zm0 18a8 8 0 1 1 8-8 8 8 0 0 1-8 8z"></path><path d="M12 6a6 6 0 0 0-6 6h2a4 4 0 0 1 4-4z"></path></svg>
+        <p>MONOGRAM</p>
+      </a>
+      <section class="header-icons-wrapper">
+        <button class="hamburguer-button">
+          <span></span>
+          <span></span>
+          <span></span>
+        </button>
+        <button class="shopping-bag">
+          <svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 0 24 24" style="fill: rgb(239, 194, 179);"><path d="M5 22h14c1.103 0 2-.897 2-2V9a1 1 0 0 0-1-1h-3V7c0-2.757-2.243-5-5-5S7 4.243 7 7v1H4a1 1 0 0 0-1 1v11c0 1.103.897 2 2 2zM9 7c0-1.654 1.346-3 3-3s3 1.346 3 3v1H9V7zm-4 3h2v2h2v-2h6v2h2v-2h2l.002 10H5V10z"></path></svg>
+        </button>
+        <select name="currency" id="currency">
+          <option value="br">BRL (R$)</option>
+          <option value="us">USD (U$)</option>
+        </select>
+      </section>
+    </section>
+  </header>
+  <main>
+    <!-- jsx -->
+  </main>
+  <footer>
+    <form class="form">
+      <h2>SUBSCRIBE TO MONOGRAM</h2>
+      <p>Master productivity with Creative Console and get all the latest Monogram news.</p>
+      <section class="input-wrapper">
+        <input type="email" name="subscription" id="subscription" placeholder="Email adress">
+        <input type="submit" value="SUBMIT" id="submit">
+      </section>
+      <!-- logos -->
+    </form>
+    <section class="information" id="info1">
+      <h2>MONOGRAM</h2>
+      <ul>
+        <li><a href="">305 King St. W.</a></li>
+        <li><a href="">Suite 502</a></li>
+        <li><a href="">Kitchener, ON</a></li>
+        <li><a href="">Canada</a></li>
+      </ul>
+    </section>
+    <section class="information" id="info2">
+      <h2>QUICK LINKS</h2>
+      <ul class="quick-links">
+        <li><a href="">Home</a></li>
+        <li><a href="">How it Works</a></li>
+        <li><a href="">Shop</a></li>
+        <li><a href="">Download</a></li>
+      </ul>
+    </section>
+    <section class="information" id="info3">
+      <h2>HELP</h2>
+      <ul>
+        <li><a href="">FAQs</a></li>
+        <li><a href="">Support Center</a></li>
+        <li><a href="">Shipping and Sales</a></li>
+      </ul>
+    </section>
+    <section class="information" id="info4">
+      <h2>INFORMATION</h2>
+      <ul>
+        <li><a href="">About Us</a></li>
+        <li><a href="">Work with us</a></li>
+        <li><a href="">Privacy Policy</a></li>
+        <li><a href="">Terms of Use</a></li>
+        <li><a href="">Terms of Sale</a></li>
+      </ul>
+    </section>
+  </footer>
+</body>
 </html>
