--- a/index.html
+++ b/index.html
@@ -29,14 +29,17 @@
           <svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 0 24 24" style="fill: rgb(239, 194, 179);"><path d="M5 22h14c1.103 0 2-.897 2-2V9a1 1 0 0 0-1-1h-3V7c0-2.757-2.243-5-5-5S7 4.243 7 7v1H4a1 1 0 0 0-1 1v11c0 1.103.897 2 2 2zM9 7c0-1.654 1.346-3 3-3s3 1.346 3 3v1H9V7zm-4 3h2v2h2v-2h6v2h2v-2h2l.002 10H5V10z"></path></svg>
         </button>
         <select name="currency" id="currency">
-          <option value="br">BRL (R$)</option>
-          <option value="us">USD (U$)</option>
+          <option value="pt-br">BRL (R$)</option>
+          <option value="en-us">USD (U$)</option>
         </select>
       </section>
     </section>
   </header>
   <main>
     <!-- jsx -->
+    <section id="root">
+
+    </section>
   </main>
   <footer>
     <form class="form">
